--- a/my-project-dasboard/package.json
+++ b/my-project-dasboard/package.json
@@ -2,7 +2,6 @@
   "name": "my-project-dasboard",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "dependencies": {
     "@syncfusion/ej2": "^19.4.48",
     "@syncfusion/ej2-react-calendars": "^19.4.48",
@@ -18,7 +17,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
